{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 13,
  "lineage": "768d6461-024b-3424-8c6b-0e8f1aeda1cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:172118049629:targetgroup/TargetGroup/af82e302dfb45797-20220226173346857400000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:targetgroup/TargetGroup/af82e302dfb45797",
            "target_id": "i-00d59a03e8bdeeb6e"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_lb_target_group.tg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:172118049629:targetgroup/TargetGroup/af82e302dfb45797-20220226173346911600000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:targetgroup/TargetGroup/af82e302dfb45797",
            "target_id": "i-0de1b752b8661a218"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:172118049629:instance/i-00d59a03e8bdeeb6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d59a03e8bdeeb6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0977cc13cc7e1f969",
            "private_dns": "ip-172-31-14-64.ec2.internal",
            "private_ip": "172.31.14.64",
            "public_dns": "ec2-3-239-22-171.compute-1.amazonaws.com",
            "public_ip": "3.239.22.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f9e348052eb4c9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b5677b7dca4a0f57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7a55f41c",
            "tags": {
              "Name": "webserver0"
            },
            "tags_all": {
              "Name": "webserver0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b5677b7dca4a0f57"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:172118049629:instance/i-0de1b752b8661a218",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de1b752b8661a218",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d785ffac1d886745",
            "private_dns": "ip-172-31-14-18.ec2.internal",
            "private_ip": "172.31.14.18",
            "public_dns": "ec2-44-197-176-38.compute-1.amazonaws.com",
            "public_ip": "44.197.176.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035197feca43390de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b5677b7dca4a0f57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7a55f41c",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b5677b7dca4a0f57"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:loadbalancer/app/ALB/c3130f06c40fc4b0",
            "arn_suffix": "app/ALB/c3130f06c40fc4b0",
            "dns_name": "ALB-1736155241.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:172118049629:loadbalancer/app/ALB/c3130f06c40fc4b0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-03d20c496f02ad462"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-14f5584b"
              },
              {
                "subnet_id": "subnet-1c017151"
              },
              {
                "subnet_id": "subnet-7a55f41c"
              },
              {
                "subnet_id": "subnet-a5aa0584"
              },
              {
                "subnet_id": "subnet-e4df2bd5"
              },
              {
                "subnet_id": "subnet-edd54fe3"
              }
            ],
            "subnets": [
              "subnet-14f5584b",
              "subnet-1c017151",
              "subnet-7a55f41c",
              "subnet-a5aa0584",
              "subnet-e4df2bd5",
              "subnet-edd54fe3"
            ],
            "vpc_id": "vpc-c026dbbd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:listener/app/ALB/c3130f06c40fc4b0/7e0af92760206f33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:172118049629:listener/app/ALB/c3130f06c40fc4b0/7e0af92760206f33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:loadbalancer/app/ALB/c3130f06c40fc4b0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.sg",
            "data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:targetgroup/TargetGroup/af82e302dfb45797",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:listener-rule/app/ALB/c3130f06c40fc4b0/7e0af92760206f33/23a11b4d91baa429",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "*.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:172118049629:listener-rule/app/ALB/c3130f06c40fc4b0/7e0af92760206f33/23a11b4d91baa429",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:listener/app/ALB/c3130f06c40fc4b0/7e0af92760206f33",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:172118049629:targetgroup/TargetGroup/af82e302dfb45797",
            "arn_suffix": "targetgroup/TargetGroup/af82e302dfb45797",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:172118049629:targetgroup/TargetGroup/af82e302dfb45797",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-c026dbbd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172118049629:security-group/sg-03d20c496f02ad462",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d20c496f02ad462",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CustomSG",
            "name_prefix": "",
            "owner_id": "172118049629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-c026dbbd"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}